added terraform config

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,24 @@ kubernetes/secret.yaml
 docker-compose.yaml
 .env
 talos_linux_setup
+
+# Environment files
+.env
+
+# Terraform files
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+*.tfvars
+*.tfvars.json
+crash.log
+crash.*.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+
+# Terraform plan files
+*.tfplan
