--- a/kubernetes/namespace.yaml
+++ b/kubernetes/namespace.yaml
@@ -1,4 +1,14 @@
-kind: Namespace
 apiVersion: v1
+kind: Namespace
 metadata:
   name: medusa-store
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: monitoring
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: redis
