--- a/kubernetes/redis/example-redis-config.yaml
+++ b/kubernetes/redis/example-redis-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: example-redis-config
-  namespace: redis
+  namespace: default
 data:
   redis-config: |
     maxmemory 2mb
